--- a/week-07-08/week-07-08.md
+++ b/week-07-08/week-07-08.md
@@ -111,9 +111,9 @@ In the lab we gave a rough outline of the implementation
 infer expr tenv subst =
   case expr of
     Const v -> case v of
-                  IntVal _ -> ConstT IntT
-                  StringVal -> ConstT StrT
-                  BoolT -> ConstT BoolT
+                  IntVal _ -> IntT
+                  StringVal -> StrT
+                  BoolT -> BoolT
     Apply lambda param -> 
       -- what's written in the comments is *roughly* what should
       -- happen, as it's written now it won't even compile.
