--- a/week-07-08/week-07-08.md
+++ b/week-07-08/week-07-08.md
@@ -62,7 +62,7 @@ Where `subts` represents your your type equations. `unify`'s semantics can be in
 The implementation of `unify` has to take into account the fact that there are, essentially, three major categories of types: the constant types (`IntT`, `BoolT`, `StringT`), the function-type (`FunT Type Type`) and the type variable (`TypeVar String`). So it will look something like this:
 
 ```Haskell
-unify:: Type -> Type -> Map String Type -> (Type, Map String Type)
+unify:: Type -> Type -> Substitution -> (Type, Substitution)
 unify toReplace replacee substs =
   case (toReplace, replacee) of
     -- when you try to unify two constant types
@@ -112,8 +112,8 @@ infer expr tenv subst =
   case expr of
     Const v -> case v of
                   IntVal _ -> IntT
-                  StringVal -> StrT
-                  BoolT -> BoolT
+                  StringVal _-> StrT
+                  BooleanVal _ -> BoolT
     Apply lambda param -> 
       -- what's written in the comments is *roughly* what should
       -- happen, as it's written now it won't even compile.
